# kafka-event-processor-rust

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: events.rs  main.rs
app/src/events/: participant.rs  survey.rs  survey_period.rs
examples/: basic.rs  events.rs
examples/events/: participant.rs  response.rs  survey.rs  survey_capture_layout.rs  survey_period.rs  survey_question.rs
framework/: Cargo.toml
framework/src/: lib.rs
src/: lib.rs  main.rs
