[package]
name = "app"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
framework = { path = "../framework" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
tracing-subscriber = "0.2.0-alpha.4"
tracing = "0.1.12"
